[package]
authors = [
    "Fin Christensen <christensen.fin@gmail.com>",
    "Johannes Wünsche <johannes.wuensche97@gmail.com>",
]
description = "An alternative debug view for gyscos/cursive using emabee/flexi_logger"
documentation = "https://docs.rs/cursive-flexi-logger-view"
edition = "2021"
keywords = ["cursive-views", "cursive", "logging", "debug", "terminal"]
license = "BSD-3-Clause"
name = "cursive-flexi-logger-view"
readme = "README.md"
repository = "https://github.com/deinstapel/cursive-flexi-logger-view"
version = "0.5.0"

[dependencies]
cursive_core = { git = "https://github.com/gyscos/cursive" }
arraydeque = "0.4"
flexi_logger = "0.27"
lazy_static = "1.4"
log = "0.4"
unicode-width = "0.1"

[dev-dependencies]
cursive = { git = "https://github.com/gyscos/cursive", default-features = false, features = [
    "crossterm",
] }
